# nexus-core

./: .dockerignore  .gitignore  AGENTIC-AWESOME-SKILLS-GUIDE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  pyrightconfig.json
docs/: ARCHITECTURE.md  (+13 more)
examples/nexus-bot/: .dockerignore  .env.example  Dockerfile  INSTALL.md  README.md  docker-compose.yml  install.py  install.sh  nexus-bot.service  nexus-health.service  nexus-processor.service  nexus-webhook.service  pyproject.toml  requirements.txt
examples/nexus-bot/config/: project_config.yaml
examples/nexus-bot/docs/: ADR-088-Feature-Registry.md  ADR-089-Telegram-Live-Workflow-Watch.md  AGENTS.md  architecture.md  completion-protocol.md  config-reference.md  framework-integration.md  plugin-system.md  telegram-live-workflow-watch-design.md  workflow-lifecycle.md
examples/nexus-bot/scripts/: check-prod-env.sh  deploy.sh  setup-webhook.sh
examples/nexus-bot/src/: __init__.py  alerting.py  analytics.py  audit_store.py  config.py  config_chat_agents.py  config_nexus_paths.py  config_paths.py  config_project_registry.py  config_project_workflow.py  config_repos.py  config_storage_capabilities.py  config_validators.py  dependencies.py  discord_bot.py  error_handling.py  health_check.py  inbox_processor.py  interactive_agent.py  interactive_context.py  interactive_utils.py  rate_limiter.py  report_scheduler.py  state_manager.py  telegram_bot.py  user_manager.py  webhook_server.py
examples/nexus-bot/src/commands/: __init__.py  workflow.py
examples/nexus-bot/src/handlers/: agent_context_utils.py  agent_definition_utils.py  audio_transcription_handler.py  bug_report_handler.py  callback_command_handlers.py  chat_command_handlers.py  common_routing.py  feature_ideation_handlers.py  feature_registry_command_handlers.py  hands_free_routing_handler.py  inbox_routing_handler.py  issue_command_handlers.py  monitoring_command_handlers.py  ops_command_handlers.py  visualize_command_handlers.py  watch_command_handlers.py  workflow_command_handlers.py
examples/nexus-bot/src/integrations/: inbox_queue.py  notifications.py  workflow_state_factory.py
examples/nexus-bot/src/orchestration/: ai_orchestrator.py  nexus_core_helpers.py  plugin_runtime.py  telegram_update_bridge.py
examples/nexus-bot/src/orchestration/common/: formatting.py  router.py
examples/nexus-bot/src/orchestration/telegram/: telegram_callback_router.py  telegram_command_router.py  telegram_update_bridge.py
examples/nexus-bot/src/runtime/: agent_launcher.py  agent_monitor.py  nexus_agent_runtime.py
examples/nexus-bot/src/services/: auth_session_service.py  command_contract.py  comment_monitor_service.py  completion_monitor_service.py  credential_crypto.py  credential_store.py  feature_ideation_callback_service.py  feature_ideation_generation_service.py  feature_registry_service.py  inbox_repo_paths_service.py  issue_finalize_service.py  issue_lifecycle_service.py  memory_service.py  merge_queue_service.py  mermaid_render_service.py  ops_direct_service.py  processor_loops_service.py  project_access_service.py  repo_resolution_service.py  startup_recovery_service.py  task_archive_service.py  task_context_service.py  task_dispatch_service.py  tier_resolution_service.py  webhook_comment_service.py  webhook_http_service.py  webhook_issue_service.py  workflow_signal_sync.py  workflow_watch_service.py
examples/nexus-bot/src/services/callbacks/: callback_menu_service.py
examples/nexus-bot/src/services/discord/: discord_bridge_deps_service.py
examples/nexus-bot/src/services/inbox/: inbox_issue_context_service.py  inbox_routing_service.py  inbox_runtime_singletons_service.py  inbox_signal_probe_service.py  inbox_sop_naming_service.py  inbox_task_processor_service.py
examples/nexus-bot/src/services/monitoring/: monitoring_logs_service.py  monitoring_status_active_service.py
examples/nexus-bot/src/services/telegram/: telegram_bootstrap_ui_service.py  telegram_chat_misc_service.py  telegram_handler_deps_service.py  telegram_interactive_ctx_service.py  telegram_issue_selection_service.py  (+2 more)
examples/nexus-bot/src/static/: visualizer.html
examples/nexus-bot/src/utils/: log_utils.py  task_utils.py
examples/nexus-bot/tests/: _bootstrap_project_config.yaml  conftest.py  test_agent_context_utils.py  test_agent_launcher_exclusions.py  test_agent_launcher_notifications.py  test_agent_launcher_worktree_step_override.py  test_agent_monitor.py  test_ai_orchestrator.py  test_analytics.py  test_archive_closed_tasks.py  test_audit_store_lifecycle.py  test_auth_byok_extensions.py  test_broadcasting_store.py  test_builtin_github_issue_plugin_usage.py  test_builtin_gitlab_issue_plugin_usage.py  test_callback_inline_service.py  test_callback_menu_service.py  test_chat_agents_config.py  test_chat_command_handlers.py  test_command_contract.py  test_command_router.py  test_command_surface_regression.py  test_command_visibility.py  test_comment_monitor_service.py  test_common_routing.py  test_config_bootstrap.py  test_config_repo_keys.py  test_config_validators.py  test_dead_agent_detection.py  test_direct_issue_plugin_service.py  test_discord_chat_mode.py  test_error_handling.py  test_feature_ideation_callback_service.py  test_feature_ideation_callback_service_usage.py  test_feature_ideation_handlers.py  test_feature_registry_command_handlers.py  test_feature_registry_service.py  test_finalize_workflow_guard.py  test_formatting.py  test_git_platform_selection.py  (+45 more)
(+534 files in other folders)
